- Payment Submission Done. - Payment List Page Work in Progress

--- a/app/src/main/res/layout/activity_new_payment.xml
+++ b/app/src/main/res/layout/activity_new_payment.xml
@@ -185,6 +185,7 @@
                     android:textColorHint="@color/dark_green">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/attachment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
