--- a/app/src/main/res/layout/activity_payment_list.xml
+++ b/app/src/main/res/layout/activity_payment_list.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/filter_cart_container"
+                android:id="@+id/filter_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -38,7 +38,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/light_green_background"
-                    android:onClick="@{()->vm.onClickNewOrder()}"
+                    android:onClick="@{()->activity.onClickNewPayment()}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/filterBtn"
                     app:layout_constraintTop_toTopOf="parent">
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/light_blue_background"
-                    android:onClick="@{()->vm.onClickFilter()}"
+                    android:onClick="@{()->activity.onClickFilter()}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -107,12 +107,14 @@
                 android:id="@+id/payment_listview"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/filter_cart_container"
+                app:layout_constraintTop_toBottomOf="@id/filter_container"
                 app:layout_constraintWidth_percent="0.95" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
