--- a/app/src/main/res/layout/activity_pending_order.xml
+++ b/app/src/main/res/layout/activity_pending_order.xml
@@ -5,10 +5,6 @@
 
     <data>
         <variable
-            name="vm"
-            type="com.akg.akg_sales.viewmodel.order.PendingOrderViewModel" />
-
-        <variable
             name="activity"
             type="com.akg.akg_sales.view.activity.order.PendingOrderActivity" />
     </data>
@@ -42,7 +38,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/light_green_background"
-                    android:onClick="@{()->vm.onClickNewOrder()}"
+                    android:onClick="@{()->activity.onClickNewOrder()}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/filterBtn"
                     app:layout_constraintTop_toTopOf="parent">
@@ -71,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/light_blue_background"
-                    android:onClick="@{()->vm.onClickFilter()}"
+                    android:onClick="@{()->activity.onClickFilter()}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
