--- a/app/src/main/res/layout/dialog_searchable_text_list.xml
+++ b/app/src/main/res/layout/dialog_searchable_text_list.xml
@@ -16,7 +16,7 @@
             android:id="@+id/dialog_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Bank Account"
+            android:text="Select From Below"
             android:textSize="20sp"
             android:textStyle="bold"
             />
