- Order Detail Page Modified & Order Value Included - Order Value Calculated in Cart Page

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -34,7 +34,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="My Cart"
                 android:textColor="@color/font_color_main"
-                android:textSize="@dimen/text_size_3"
+                android:textSize="@dimen/text_size_2"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +99,7 @@
                 android:layout_marginTop="8dp"
                 android:text="Selected Items:"
                 android:textColor="@color/font_color_main"
-                android:textSize="@dimen/text_size_2"
+                android:textSize="@dimen/text_size_1"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/selected_item_listview"
                 app:layout_constraintStart_toStartOf="parent"
@@ -121,19 +121,39 @@
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="@android:color/holo_blue_light"
-                android:paddingStart="40dp"
-                android:paddingTop="15dp"
-                android:paddingEnd="40dp"
-                android:paddingBottom="15dp"
-                android:text="Submit Order"
-                android:textColor="@color/font_color_main"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="8dp"
+                android:backgroundTint="#e6e3dc"
+                android:onClick="@{()->vm.onClickSubmitBtn()}"
+                android:paddingStart="20dp"
+                android:paddingTop="10dp"
+                android:paddingEnd="20dp"
+                android:paddingBottom="10dp"
+                android:text="Submit"
+                android:textColor="@color/dark_green"
                 android:textSize="@dimen/text_size_1"
                 android:textStyle="bold"
-                android:onClick="@{()->vm.onClickSubmitBtn()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/selected_item_listview" />
+
+            <TextView
+                android:id="@+id/order_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/light_grey_background"
+                android:hint="Approx Value: \n120000 Tk"
+                android:paddingStart="15dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="5dp"
+                android:textAlignment="center"
+                android:textColor="@color/font_color_main"
+                android:textSize="@dimen/text_size_1"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/selected_item_listview" />
 
