--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:gravity="center"
             android:layout_margin="8dp"
             android:padding="20dp"
             android:orientation="vertical"
@@ -30,20 +30,17 @@
                 android:layout_height="50dp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="90dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraintLayout12"
-                    android:layout_width="0dp"
+                    android:layout_width="85dp"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="60dp"
                     android:background="@drawable/akg_logo"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.25">
+                    app:layout_constraintTop_toTopOf="parent">
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -51,7 +48,6 @@
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="60dp"
                     android:text="@string/app_name"
                     android:textColor="@color/dark_green"
                     android:textSize="@dimen/text_size_5"
@@ -65,11 +61,11 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
                     android:text="A Sales Bridge"
                     android:textColor="@color/font_color_main"
                     android:textSize="@dimen/text_size_1"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/constraintLayout12"
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -92,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:drawableStart="@android:drawable/sym_action_email"
+                    android:drawableStart="@drawable/person"
                     android:drawableTint="@android:color/holo_green_dark"
                     android:hint="Username"
                     android:background="@null"
@@ -106,8 +102,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
