--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -31,7 +31,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="Order Detail"
                 android:textColor="@color/font_color_main"
-                android:textSize="@dimen/text_size_4"
+                android:textSize="@dimen/text_size_2"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,32 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="3"
-                                android:text="Order:"
+                                android:text="Date:"
+                                android:textColor="@color/font_color_main"
+                                android:textSize="@dimen/text_size_1"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="7"
+                                android:text="@{vm.creationTime}"
+                                android:textColor="@color/font_color_main"
+                                android:textSize="@dimen/text_size_1"
+                                android:hint="data"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="10">
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="3"
+                                android:text="Order No:"
                                 android:textColor="@color/font_color_main"
                                 android:textSize="@dimen/text_size_1"
                                 android:textStyle="bold" />
@@ -143,6 +168,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:layout_marginTop="10dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -167,56 +193,9 @@
                                 android:hint="data"/>
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:weightSum="10">
 
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="3"
-                                android:text="Date:"
-                                android:textColor="@color/font_color_main"
-                                android:textSize="@dimen/text_size_1"
-                                android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="7"
-                                android:text="@{vm.creationTime}"
-                                android:textColor="@color/font_color_main"
-                                android:textSize="@dimen/text_size_1"
-                                android:hint="data"/>
-                        </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:weightSum="10"
-                            android:visibility="gone">
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="3"
-                                android:text="Value:"
-                                android:textColor="@color/font_color_main"
-                                android:textSize="@dimen/text_size_1"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="7"
-                                android:hint="data"
-                                android:text="@{vm.value.toString()}"
-                                android:textColor="@color/font_color_main"
-                                android:textSize="@dimen/text_size_1" />
-                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -228,11 +207,11 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Order Lines"
+                            android:text="Order Lines:"
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp"
                             android:textColor="@color/font_color_main"
-                            android:textSize="@dimen/text_size_2"
+                            android:textSize="@dimen/text_size_1"
                             android:textStyle="bold" />
 
                         <androidx.recyclerview.widget.RecyclerView
@@ -242,8 +221,34 @@
                             />
 
                         <LinearLayout
+                            android:layout_marginTop="15dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="10">
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="5"
+                                android:text="Approximate Value:"
+                                android:textColor="@color/font_color_main"
+                                android:textSize="@dimen/text_size_1"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="5"
+                                android:hint="data"
+                                android:textAlignment="textEnd"
+                                android:text="@{vm.value.toString()+` Tk`}"
+                                android:textColor="@color/font_color_main"
+                                android:textSize="@dimen/text_size_1" />
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:id="@+id/order_action"
-                            android:paddingTop="15dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -253,7 +258,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:text="Approve"
-                                android:textColor="@color/font_color_main"
+                                android:textColor="@color/white"
                                 android:textStyle="bold"
                                 android:textSize="@dimen/text_size_1"
                                 android:layout_margin="10dp"
@@ -266,13 +271,13 @@
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:text="Cancel"
-                                android:textColor="@color/font_color_main"
+                                android:textColor="@color/white"
                                 android:textStyle="bold"
                                 android:paddingTop="10dp"
                                 android:paddingBottom="10dp"
                                 android:textSize="@dimen/text_size_1"
                                 android:layout_margin="10dp"
-                                android:backgroundTint="@android:color/holo_red_dark"
+                                android:backgroundTint="@android:color/holo_red_light"
                                 android:layout_weight="1"/>
                         </LinearLayout>
 
