--- a/app/src/main/res/layout/listitem_order_line.xml
+++ b/app/src/main/res/layout/listitem_order_line.xml
@@ -50,18 +50,18 @@
             android:paddingEnd="10sp"
             android:layout_weight="9"
             android:weightSum="10"
+            android:gravity="center"
             android:baselineAligned="false">
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical"
                 android:layout_weight="6">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/font_color_main"
-                    android:textSize="@dimen/text_size_1"
+                    android:textSize="18sp"
                     android:paddingStart="1dp"
                     android:paddingEnd="5dp"
                     android:paddingBottom="10dp"
@@ -91,7 +91,6 @@
                         android:text="@{vm.quantity.toString()}"
                         android:textColor="@color/font_color_main"
                         android:textStyle="italic"
-                        android:textSize="@dimen/text_size_1"
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:paddingStart="15dp"
@@ -104,8 +103,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/font_color_main"
                         android:textStyle="italic"
-                        android:textSize="@dimen/text_size_1"
-                        android:padding="10dp"
+                        android:padding="5dp"
                         android:hint="CTN" />
 
                 </LinearLayout>
@@ -119,8 +117,8 @@
                     android:padding="10dp">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="45dp"
-                        android:layout_height="45dp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:background="@drawable/delete"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
